--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+  <style>
+    section {
+      padding: 60px 0;
+    }
+  </style>
 </head>
 
 <body>
@@ -30,13 +35,13 @@
       <div class="collapse navbar-collapse justify-content-end" id="main-nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#home">Home</a>
+            <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#about-me">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#education">Education</a>
+            <a class="nav-link" href="#organization">Organization</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#projects">Projects</a>
@@ -51,7 +56,7 @@
 
   <!-- home -->
   <section id="home" class="bg-light">
-    <div class="container-lg">
+    <div class="container-lg justify-content-center align-items-center">
       <div class="text-center">
         <img src="/assets/foto-husain.png" class="img-fluid pt-5" width="300" alt="foto-husain">
         <h2 class="pt-3">Husain Taufiqqurrahman</h2>
@@ -61,7 +66,29 @@
   </section>
 
   <!-- about me -->
-  
+  <section id="about-me">
+    <div class="container-lg">
+      <div class="row justify-content-center align-items-center">
+        <!-- about me -->
+        <div class="col-md-5 text-center text-md-start">
+          <h1 class="fw-bold">About Me</h1>
+          <p class="text-justify">My name is Husain Taufiqqurrahman, i am currently 21 years old and currently studying at Informatics
+            Faculty of Computer Science, UPNV Jawa Timur.</p>
+          <p>I'm currently studying Bootstrap Framework and other css frameworks</p>
+          <button class="btn btn-light border-primary"><a href="#" class="text-primary text-decoration-none">Download CV</a></button>
+        </div>
+        <!-- education -->
+        <div class="col-md-5 text-center text-md-start">
+          <h1 class="fw-bold">Education</h1>
+          <p class="lead class=" fw-semibold>2019 - Now</p>
+          <p class="fw-semibold">Informatics - UPNV Jawa Timur</p>
+          <p class="lead">2016 - 2019</p>
+          <p>Natural Science - SMAN 3 Karawang</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
