udah nambah org

--- a/index.html
+++ b/index.html
@@ -68,26 +68,56 @@
   <!-- about me -->
   <section id="about-me">
     <div class="container-lg">
-      <div class="row justify-content-center align-items-center">
+      <div class="row g-4 justify-content-center align-items-center">
         <!-- about me -->
-        <div class="col-md-5 text-center text-md-start">
+        <div class="col-md-5 text-md-start px-4">
           <h1 class="fw-bold">About Me</h1>
-          <p class="text-justify">My name is Husain Taufiqqurrahman, i am currently 21 years old and currently studying at Informatics
+          <p class="text-justify">My name is Husain Taufiqqurrahman, i am currently 21 years old and currently studying
+            at Informatics
             Faculty of Computer Science, UPNV Jawa Timur.</p>
           <p>I'm currently studying Bootstrap Framework and other css frameworks</p>
-          <button class="btn btn-light border-primary"><a href="#" class="text-primary text-decoration-none">Download CV</a></button>
+          <button class="btn btn-light border-primary"><a href="#" class="text-primary text-decoration-none">Download
+              CV</a></button>
         </div>
         <!-- education -->
-        <div class="col-md-5 text-center text-md-start">
+        <div class="col-md-5 text-md-start px-4">
           <h1 class="fw-bold">Education</h1>
           <p class="lead class=" fw-semibold>2019 - Now</p>
           <p class="fw-semibold">Informatics - UPNV Jawa Timur</p>
           <p class="lead">2016 - 2019</p>
           <p>Natural Science - SMAN 3 Karawang</p>
+          <br>
         </div>
       </div>
     </div>
   </section>
+
+  <section id="organization" class="bg-light">
+    <div class="container-lg">
+      <div class="text-md-center text-start">
+        <h1 class="fw-bold py-3 px-4">Organization</h1>
+        <!-- glc -->
+        <h2 class="px-4">Global Language Club</h1>
+          <p class="lead px-4 text-primary fw-bold">Controlling Agency Working Division</p>
+          <p class="px-4 text-primary">Jan 2022 - Present</p>
+
+          <p class="lead px-4">President</p>
+          <p class="px-4 text-muted">Jan 2021 - Jan 2022</p>
+
+          <p class="lead px-4">Staff of Public Relation Department</p>
+          <p class="px-4 text-muted">Feb 2020 - Jan 2021</p>
+
+        <!-- ilc -->
+        <br>
+          <h2 class="px-4">Informatics Learning Community</h1>
+          <p class="lead px-4">Head of Graphic Division</p>
+          <p class="px-4 text-muted">May 2021 - Apr 2022</p>
+          
+      </div>
+    </div>
+  </section>
+
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
