organisasi udah fix

--- a/index.html
+++ b/index.html
@@ -94,25 +94,44 @@
 
   <section id="organization" class="bg-light">
     <div class="container-lg">
-      <div class="text-md-center text-start">
-        <h1 class="fw-bold py-3 px-4">Organization</h1>
+      <div class="text-center">
+        <h1 class="fw-bold">Organization</h1>
+      </div>
+      <div class="row g-4 justify-content-center align-items-start py-5">
         <!-- glc -->
-        <h2 class="px-4">Global Language Club</h1>
-          <p class="lead px-4 text-primary fw-bold">Controlling Agency Working Division</p>
-          <p class="px-4 text-primary">Jan 2022 - Present</p>
+        <div class="col-md-4 text-md-start px-4">
+          <h2 class="fw-bold py-2">Global Language Club</h2>
+          <h4>CA of Working Division</h4>
+          <p>Jan 2022 - Present</p>
 
-          <p class="lead px-4">President</p>
-          <p class="px-4 text-muted">Jan 2021 - Jan 2022</p>
+          <h4>President</h4>
+          <p>Jan 2021 - Jan 2022</p>
 
-          <p class="lead px-4">Staff of Public Relation Department</p>
-          <p class="px-4 text-muted">Feb 2020 - Jan 2021</p>
-
+          <h4>Staff of PRD</h4>
+          <p>Feb 2020 - Jan 2021</p>
+        </div>
         <!-- ilc -->
-        <br>
-          <h2 class="px-4">Informatics Learning Community</h1>
-          <p class="lead px-4">Head of Graphic Division</p>
-          <p class="px-4 text-muted">May 2021 - Apr 2022</p>
-          
+        <div class="col-md-4 text-md-start px-4">
+          <h2 class="fw-bold py-2">ILC G-15</h2>
+          <h4>Head of Graphic Division</h4>
+          <p>May 2021 - Apr 2022</p>
+        </div>
+
+        <!-- hima -->
+        <div class="col-md-4 text-md-start px-4">
+          <h2 class="fw-bold py-2">Committee</h2>
+          <h4>Head of PDD DIKLAT GLC 2020</h4>
+          <p>Nov 2020</p>
+
+          <h4>Head of PDD SMATCO 2020</h4>
+          <p>Jul 2020 - Oct 2020</p>
+
+          <h4>Member of PDD PEMIRA 2019</h4>
+          <p>Dec 2019</p>
+
+          <h4>Head of PDD SONIC 2019</h4>
+          <p>Nov 2019</p>
+        </div>
       </div>
     </div>
   </section>
