All Fixed. Ready to go

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section id="home" class="bg-light">
     <div class="container-lg justify-content-center align-items-center">
       <div class="text-center">
-        <img src="/assets/foto-husain.png" class="img-fluid pt-5" width="300" alt="foto-husain">
+        <img src="foto-husain.png" class="img-fluid pt-5" width="300" alt="foto-husain">
         <h2 class="pt-3">Husain Taufiqqurrahman</h2>
         <p class="lead text-muted py-3">Undegraduate Computer Science Student | Web Developer</p>
       </div>
@@ -147,7 +147,7 @@
         <!-- BMI -->
         <div class="col-8 col-md-4 px-4">
           <div class="card" style="width: 18rem;">
-            <img src="/assets/bmi-calc.png" class="card-img-top" width="200" alt="kalkulator bmi">
+            <img src="bmi-calc.png" class="card-img-top" width="200" alt="kalkulator bmi">
             <div class="card-body">
               <h5 class="card-title">BMI Calculator</h5>
               <p class="card-text">Calculator to calculate your ideal body mass index</p>
@@ -160,7 +160,7 @@
         <!-- Bio Link Website -->
         <div class="col-8 col-md-4 px-4">
           <div class="card" style="width: 18rem;">
-            <img src="/assets/bio-link.png" class="card-img-top" width="200" alt="kalkulator bmi">
+            <img src="bio-link.png" class="card-img-top" width="200" alt="kalkulator bmi">
             <div class="card-body">
               <h5 class="card-title">Bio Link Website</h5>
               <p class="card-text">Link to my other social media</p>
@@ -173,7 +173,7 @@
         <!-- Day Until -->
         <div class="col-8 col-md-4 px-4">
           <div class="card" style="width: 18rem;">
-            <img src="/assets/day-until.png" class="card-img-top" alt="day until">
+            <img src="day-until.png" class="card-img-top" alt="day until">
             <div class="card-body">
               <h5 class="card-title">Day Until</h5>
               <p class="card-text">Countdown until 31 december 2022</p>
