All Fixed. Ready to go

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="row g-4 justify-content-center align-items-center py-3">
 
         <!-- BMI -->
-        <div class="col-8 col-md-4 px-4">
+        <div class="col-sm-8 col-md-4 px-4">
           <div class="card" style="width: 18rem;">
             <img src="bmi-calc.png" class="card-img-top" width="200" alt="kalkulator bmi">
             <div class="card-body">
@@ -158,7 +158,7 @@
         </div>
 
         <!-- Bio Link Website -->
-        <div class="col-8 col-md-4 px-4">
+        <div class="col-sm-8 col-md-4 px-4">
           <div class="card" style="width: 18rem;">
             <img src="bio-link.png" class="card-img-top" width="200" alt="kalkulator bmi">
             <div class="card-body">
@@ -171,7 +171,7 @@
         </div>
 
         <!-- Day Until -->
-        <div class="col-8 col-md-4 px-4">
+        <div class="col-sm-8 col-md-4 px-4">
           <div class="card" style="width: 18rem;">
             <img src="day-until.png" class="card-img-top" alt="day until">
             <div class="card-body">
