Test Reset Style

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
         <!-- BMI -->
         <div class="col-sm-8 col-md-4 px-4">
-          <div class="card" style="width: 100%;">
+          <div class="card mx-auto" style="width: 100%;">
             <img src="bmi-calc.png" class="card-img-top" width="200" alt="kalkulator bmi">
             <div class="card-body">
               <h5 class="card-title">BMI Calculator</h5>
@@ -159,7 +159,7 @@
 
         <!-- Bio Link Website -->
         <div class="col-sm-8 col-md-4 px-4">
-          <div class="card" style="width: 100%;">
+          <div class="card mx-auto" style="width: 100%;">
             <img src="bio-link.png" class="card-img-top" width="200" alt="kalkulator bmi">
             <div class="card-body">
               <h5 class="card-title">Bio Link Website</h5>
@@ -172,7 +172,7 @@
 
         <!-- Day Until -->
         <div class="col-sm-8 col-md-4 px-4">
-          <div class="card" style="width: 100%;">
+          <div class="card mx-auto" style="width: 100%;">
             <img src="day-until.png" class="card-img-top" alt="day until">
             <div class="card-body">
               <h5 class="card-title">Day Until</h5>
