FIX, Tinggal Translate

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="text-center">
         <img src="foto-husain.png" class="img-fluid pt-5" width="300" alt="foto-husain">
         <h2 class="pt-3">Husain Taufiqqurrahman</h2>
-        <p class="lead text-muted py-3">Undegraduate Computer Science Student | Web Developer</p>
+        <p class="lead text-muted py-3">Undegraduate Computer Science Student</p>
       </div>
     </div>
   </section>
@@ -142,7 +142,7 @@
       <div class="text-center">
         <h1 class="fw-bold">Projects</h1>
       </div>
-      <div class="row g-4 justify-content-center align-items-center py-3">
+      <div class="row g-4 justify-content-center align-items-start py-3">
 
         <!-- BMI -->
         <div class="col-sm-8 col-md-4 px-4">
@@ -150,7 +150,7 @@
             <img src="bmi-calc.png" class="card-img-top" width="200" alt="kalkulator bmi">
             <div class="card-body">
               <h5 class="card-title">BMI Calculator</h5>
-              <p class="card-text">Calculator to calculate your ideal body mass index</p>
+              <p class="card-text">Calculator to calculate your ideal BMI</p>
               <a href="https://github.com/opickbintang19/kalkulator-bmi" class="btn btn-primary" target="_blank">Go
                 somewhere</a>
             </div>
@@ -182,60 +182,98 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </section>
 
-  <section id="contact" class="bg-light">
-    <div class="container-lg">
-      <div class="text-center">
-        <h2>Get in touch</h2>
-        <p class="lead">You have a question? Fill out the form to contact me directly</p>
-      </div>
-
-      <div class="row justify-content-center my-5">
-        <div class="col-lg-6">
-          <form action="">
-            <!-- email -->
-            <label for="email" class="form-label">Email</label>
-            <div class="mb-4 input-group">
-              <span class="input-group-text">
-                <i class="bi bi-envelope-fill"></i>
-              </span>
-              <input type="email" class="form-control" id="email" placeholder="e.g husain@example.com">
+        <!-- Matriks C -->
+        <div class="col-sm-8 col-md-4 px-4">
+          <div class="card mx-auto" style="width: 100%;">
+            <img src="matriks-c.png" class="card-img-top" alt="matriks bahasa c">
+            <div class="card-body">
+              <h5 class="card-title">Perhitungan Matriks 3x3</h5>
+              <p class="card-text">Penjumlahan,Pengurangan,Perkalian Matriks 3x3</p>
+              <a href="https://github.com/opickbintang19/matriks_c" class="btn btn-primary" target="_blank">Go
+                somewhere</a>
             </div>
-
-            <!-- nama -->
-            <label for="name" class="form-label">Name</label>
-            <div class="mb-4 input-group">
-              <span class="input-group-text">
-                <i class="bi bi-people-fill"></i>
-              </span>
-              <input type="name" class="form-control" id="name" placeholder="e.g Husain">
-            </div>
-
-            <div class="form-floating mb-4 mt-5">
-              <textarea id="query" class="form-control" style="height: 120px;" placeholder="your query.."></textarea>
-              <label for="query">Your query...</label>
-            </div>
-
-            <div class="mb-4 text-start">
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-          </form>
+          </div>
         </div>
+
+        <!-- Cek Penyakit -->
+        <div class="col-sm-8 col-md-4 px-4">
+          <div class="card mx-auto" style="width: 100%;">
+            <img src="naive-bayes.png" class="card-img-top" alt="cek penyakit jantung">
+            <div class="card-body">
+              <h5 class="card-title">Cek Penyakit Jantung</h5>
+              <p class="card-text">Cek probabilitas penyakit jantung dengan algoritma naive bayes</p>
+              <a href="https://github.com/opickbintang19/naivebayes_statkom" class="btn btn-primary" target="_blank">Go
+                somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- KNN -->
+        <div class="col-sm-8 col-md-4 px-4">
+          <div class="card mx-auto" style="width: 100%;">
+            <img src="knn-pola.png" class="card-img-top" alt="project knn pengenalan pola">
+            <div class="card-body">
+              <h5 class="card-title">K Nearest Neighbor</h5>
+              <p class="card-text">Mengklasifikasi hasil nilai test bahasa indonesia penutur asing</p>
+              <a href="https://github.com/opickbintang19/FP_Pola_KNN" class="btn btn-primary" target="_blank">Go
+                somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Parkirin -->
+        <div class="col-sm-8 col-md-4 px-4">
+          <div class="card mx-auto" style="width: 100%;">
+            <img src="parkirin.png" class="card-img-top" alt="desain app parkirin">
+            <div class="card-body">
+              <h5 class="card-title">Parkirin Design Mobile App</h5>
+              <p class="card-text">Desain mobile app Parkirin</p>
+              <a href="https://www.figma.com/proto/SrQZGU33SI7Dxyj7VNX0OE/Parkirin?node-id=11%3A573&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A6&show-proto-sidebar=1" class="btn btn-primary" target="_blank">Go
+                somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Cek Obat -->
+        <div class="col-sm-8 col-md-4 px-4">
+          <div class="card mx-auto" style="width: 100%;">
+            <img src="cek-obat.png" class="card-img-top" alt="desain app cek obat">
+            <div class="card-body">
+              <h5 class="card-title">Cek Obat Design Mobile App</h5>
+              <p class="card-text">Desain mobile app Cek Obat</p>
+              <a href="https://www.figma.com/proto/8uilUFKlLE1N04LgNn9b7e/Cek-Obat?node-id=2%3A48&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A3" class="btn btn-primary" target="_blank">Go
+                somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Desain Brosur -->
+        <div class="col-sm-8 col-md-4 px-4">
+          <div class="card mx-auto" style="width: 100%;">
+            <img src="1 - COMPRO.png" class="card-img-top" alt="desain brosur cv sis">
+            <div class="card-body">
+              <h5 class="card-title">Desain Brosur CV Segitiga Indo Sakti</h5>
+              <p class="card-text">Desain brosur</p>
+              <a href="https://www.figma.com/file/EB2WRgQScnpK0mynNeDDBX/CV-Segitiga-Indo-Sakti?node-id=0%3A1" class="btn btn-primary" target="_blank">Go
+                somewhere</a>
+            </div>
+          </div>
+        </div>
+
+
       </div>
     </div>
   </section>
 
   <!-- footer -->
   <!-- Footer -->
-  <footer class="text-center text-lg-start bg-white text-muted">
+  <footer class="text-center text-lg-start bg-white text-muted" id="contact">
     <!-- Section: Social media -->
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
       <div class="me-5 d-none d-lg-block">
-        <span>Get connected with me on social networks:</span>
+        <span>Reach me on</span>
       </div>
       <!-- Left -->
 
