--- a/index.html
+++ b/index.html
@@ -72,20 +72,20 @@
         <!-- about me -->
         <div class="col-md-5 text-md-start px-4">
           <h1 class="fw-bold"><i class="bi bi-person-circle"></i> About Me</h1>
-          <p class="text-justify">My name is Husain Taufiqqurrahman, i am currently 21 years old and currently studying
-            at Informatics
-            Faculty of Computer Science, UPNV Jawa Timur.</p>
-          <p>I'm currently studying Bootstrap Framework and other css frameworks</p>
-          <button class="btn btn-light border-primary"><a href="https://www.linkedin.com/resume-builder/urn:li:fs_memberResume:43294900/" class="text-primary text-decoration-none" target="_blank"><i
-                class="bi bi-briefcase-fill"></i> View My Resume</a></button>
+          <p>I am a computer science student who has interest in UI/UX Design, Web Design and also Front-end Development. </p>
+          <p>I'm currently learn about CSS Framework such as Bootstrap, Tailwind and also learn about Javascript and PHP as my preffered programming languange</p>
+          <button class="btn btn-light border-primary"><a
+              href="https://drive.google.com/file/d/1WSpvgiTd-KXH8thVNfAzW2i-AhMEsITy/view?usp=sharing"
+              class="text-primary text-decoration-none" target="_blank"><i class="bi bi-briefcase-fill"></i> View My
+              Resume</a></button>
         </div>
         <!-- education -->
         <div class="col-md-5 text-md-start px-4">
-          <h1 class="fw-bold">Education</h1>
-          <p class="lead class=" fw-semibold>2019 - Now</p>
-          <p class="fw-semibold">Informatics - UPNV Jawa Timur</p>
-          <p class="lead">2016 - 2019</p>
+          <h1 class="fw-bold"><i class="bi bi-bank2"></i> Education</h1>
+          <p class="fw-semibold fs-5">Informatics - UPNV Jawa Timur</p>
+          <p>2019 - Now</p>
           <p>Natural Science - SMAN 3 Karawang</p>
+          <p>2016 - 2019</p>
           <br>
         </div>
       </div>
@@ -150,7 +150,7 @@
             <img src="bmi-calc.png" class="card-img-top" width="200" alt="kalkulator bmi">
             <div class="card-body">
               <h5 class="card-title">BMI Calculator</h5>
-              <p class="card-text">Calculator to calculate your ideal BMI</p>
+              <p class="card-text">This method is used to determine a healthy weight based on weight and height.</p>
               <a href="https://github.com/opickbintang19/kalkulator-bmi" class="btn btn-primary" target="_blank">Go
                 somewhere</a>
             </div>
@@ -163,7 +163,7 @@
             <img src="bio-link.png" class="card-img-top" width="200" alt="kalkulator bmi">
             <div class="card-body">
               <h5 class="card-title">Bio Link Website</h5>
-              <p class="card-text">Link to my other social media</p>
+              <p class="card-text">Made something similar to linktree, but I made my own in a style that suits me</p>
               <a href="https://github.com/opickbintang19/biolink.github.io" class="btn btn-primary" target="_blank">Go
                 somewhere</a>
             </div>
@@ -176,7 +176,7 @@
             <img src="day-until.png" class="card-img-top" alt="day until">
             <div class="card-body">
               <h5 class="card-title">Day Until</h5>
-              <p class="card-text">Countdown until 31 december 2022</p>
+              <p class="card-text">This website is intended for a countdown to December 31st, 2022</p>
               <a href="https://github.com/opickbintang19/day-until" class="btn btn-primary" target="_blank">Go
                 somewhere</a>
             </div>
@@ -188,8 +188,8 @@
           <div class="card mx-auto" style="width: 100%;">
             <img src="matriks-c.png" class="card-img-top" alt="matriks bahasa c">
             <div class="card-body">
-              <h5 class="card-title">Perhitungan Matriks 3x3</h5>
-              <p class="card-text">Penjumlahan,Pengurangan,Perkalian Matriks 3x3</p>
+              <h5 class="card-title">3x3 Matrix Calculator</h5>
+              <p class="card-text">I made a 3x3 matrix calculator using the C programming language. The things that can be calculated are addition, subtraction and multiplication.</p>
               <a href="https://github.com/opickbintang19/matriks_c" class="btn btn-primary" target="_blank">Go
                 somewhere</a>
             </div>
@@ -201,8 +201,8 @@
           <div class="card mx-auto" style="width: 100%;">
             <img src="naive-bayes.png" class="card-img-top" alt="cek penyakit jantung">
             <div class="card-body">
-              <h5 class="card-title">Cek Penyakit Jantung</h5>
-              <p class="card-text">Cek probabilitas penyakit jantung dengan algoritma naive bayes</p>
+              <h5 class="card-title">Naive Bayes - Heart Disease Checking</h5>
+              <p class="card-text">I made a heart disease checking program using the Python programming language and using the Naive Bayes algorithm.</p>
               <a href="https://github.com/opickbintang19/naivebayes_statkom" class="btn btn-primary" target="_blank">Go
                 somewhere</a>
             </div>
@@ -214,8 +214,8 @@
           <div class="card mx-auto" style="width: 100%;">
             <img src="knn-pola.png" class="card-img-top" alt="project knn pengenalan pola">
             <div class="card-body">
-              <h5 class="card-title">K Nearest Neighbor</h5>
-              <p class="card-text">Mengklasifikasi hasil nilai test bahasa indonesia penutur asing</p>
+              <h5 class="card-title">KNN - BIPA Test Results</h5>
+              <p class="card-text">I created a BIPA test score classification program using the Python programming language and using the K Nearest Neighbor algorithm.</p>
               <a href="https://github.com/opickbintang19/FP_Pola_KNN" class="btn btn-primary" target="_blank">Go
                 somewhere</a>
             </div>
@@ -227,9 +227,10 @@
           <div class="card mx-auto" style="width: 100%;">
             <img src="parkirin.png" class="card-img-top" alt="desain app parkirin">
             <div class="card-body">
-              <h5 class="card-title">Parkirin Design Mobile App</h5>
-              <p class="card-text">Desain mobile app Parkirin</p>
-              <a href="https://www.figma.com/proto/SrQZGU33SI7Dxyj7VNX0OE/Parkirin?node-id=11%3A573&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A6&show-proto-sidebar=1" class="btn btn-primary" target="_blank">Go
+              <h5 class="card-title">Design Mobile App - Parkirin</h5>
+              <p class="card-text">This project is intended to fulfill the final project of the Interface Design course. Made using Figma.</p>
+              <a href="https://www.figma.com/proto/SrQZGU33SI7Dxyj7VNX0OE/Parkirin?node-id=11%3A573&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A6&show-proto-sidebar=1"
+                class="btn btn-primary" target="_blank">Go
                 somewhere</a>
             </div>
           </div>
@@ -240,9 +241,10 @@
           <div class="card mx-auto" style="width: 100%;">
             <img src="cek-obat.png" class="card-img-top" alt="desain app cek obat">
             <div class="card-body">
-              <h5 class="card-title">Cek Obat Design Mobile App</h5>
-              <p class="card-text">Desain mobile app Cek Obat</p>
-              <a href="https://www.figma.com/proto/8uilUFKlLE1N04LgNn9b7e/Cek-Obat?node-id=2%3A48&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A3" class="btn btn-primary" target="_blank">Go
+              <h5 class="card-title">Design Mobile App - Cek Obat</h5>
+              <p class="card-text">This project is intended to fulfill the final project of the Needs Analysis course. Made using Figma.</p>
+              <a href="https://www.figma.com/proto/8uilUFKlLE1N04LgNn9b7e/Cek-Obat?node-id=2%3A48&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A3"
+                class="btn btn-primary" target="_blank">Go
                 somewhere</a>
             </div>
           </div>
@@ -253,9 +255,10 @@
           <div class="card mx-auto" style="width: 100%;">
             <img src="1 - COMPRO.png" class="card-img-top" alt="desain brosur cv sis">
             <div class="card-body">
-              <h5 class="card-title">Desain Brosur CV Segitiga Indo Sakti</h5>
-              <p class="card-text">Desain brosur</p>
-              <a href="https://www.figma.com/file/EB2WRgQScnpK0mynNeDDBX/CV-Segitiga-Indo-Sakti?node-id=0%3A1" class="btn btn-primary" target="_blank">Go
+              <h5 class="card-title">Catalog Design</h5>
+              <p class="card-text">This project was intended as an internship assignment while at CV Segitiga Indosakti. Made using Figma.</p>
+              <a href="https://www.segitigaindosakti.com/compro"
+                class="btn btn-primary" target="_blank">Go
                 somewhere</a>
             </div>
           </div>
@@ -281,8 +284,10 @@
       <div>
         <a href="https://www.facebook.com/HusainT123" class="me-4 link-secondary"><i class="fab fa-facebook-f"></i></a>
         <a href="https://twitter.com/doyan_alpucok" class="me-4 link-secondary"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.instagram.com/doyan.alpucok/" class="me-4 link-secondary"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/husain-taufiqqurrahman/" class="me-4 link-secondary"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/doyan.alpucok/" class="me-4 link-secondary"><i
+            class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/husain-taufiqqurrahman/" class="me-4 link-secondary"><i
+            class="fab fa-linkedin"></i></a>
         <a href="https://github.com/opickbintang19" class="me-4 link-secondary"><i class="fab fa-github"></i></a>
       </div>
       <!-- Right -->
